--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build-dev": "webpack -d --mode development --watch  --config webpack.dev.config.js",
     "build-prod": "webpack -p --mode production --watch --config webpack.prod.config.js",
-    "start": "webpack-dev-server --hot --mode development --config webpack.dev.config.js"
+    "start": "webpack-dev-server --mode development --hot --config webpack.dev.config.js"
   },
   "keywords": [],
   "author": "",
