--- a/package.json
+++ b/package.json
@@ -6,16 +6,24 @@
   "scripts": {
     "build-dev": "webpack -d --mode development --watch  --config webpack.dev.config.js",
     "build-prod": "webpack -p --mode production --watch --config webpack.prod.config.js",
-    "start": "webpack-dev-server --mode development --hot --config webpack.dev.config.js"
+    "start": "webpack-dev-server --mode development --hot --config webpack.dev.config.js",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage --colors"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@testing-library/jest-dom": "^5.11.2",
+    "@testing-library/react": "^10.4.7",
+    "babel-jest": "^26.2.2",
+    "jest": "^26.2.2",
     "lodash": "^4.17.19",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-hot-loader": "^4.12.21"
+    "react-hot-loader": "^4.12.21",
+    "react-test-renderer": "^16.13.1"
   },
   "devDependencies": {
     "@babel/core": "^7.10.5",
@@ -25,7 +33,10 @@
     "@hot-loader/react-dom": "^16.13.0",
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
+    "core-js": "^3.6.5",
     "css-loader": "^4.0.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
     "html-webpack-plugin": "^4.3.0",
     "mini-css-extract-plugin": "^0.9.0",
     "style-loader": "^1.2.1",
